tests/transpiler/x/java/map_literal_dynamic.error
exit status 1
Main.java:21: error: cannot find symbol
        System.out.println(m.get("a") + " " + m.get("b"));
                            ^
  symbol:   method get(String)
  location: variable m of type Data1
Main.java:21: error: cannot find symbol
        System.out.println(m.get("a") + " " + m.get("b"));
                                               ^
  symbol:   method get(String)
  location: variable m of type Data1
2 errors
